@@ -1,5 +1,9 @@
 2006-08-30  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/gif.c: similar cleanup, removed unused parameters.
+
+2006-08-30  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/png.c: removed debugging output; minor cleanup.
 
 2006-08-30  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
